--- a/fooiy/ios/fooiy/LaunchScreen.storyboard
+++ b/fooiy/ios/fooiy/LaunchScreen.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,33 +12,28 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="dj1-cf-agx">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="kxD-Xm-nbK">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="dj1-cf-agx" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="C95-mG-Y7O"/>
-                            <constraint firstAttribute="bottom" secondItem="dj1-cf-agx" secondAttribute="bottom" id="e3l-LZ-E4e"/>
-                            <constraint firstAttribute="trailing" secondItem="dj1-cf-agx" secondAttribute="trailing" id="gZI-z3-Yfu"/>
-                            <constraint firstItem="dj1-cf-agx" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="iP8-Ni-Q6d"/>
-                            <constraint firstItem="dj1-cf-agx" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="iol-fS-D0B"/>
-                            <constraint firstItem="dj1-cf-agx" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="lnE-zi-3ag"/>
+                            <constraint firstAttribute="bottom" secondItem="kxD-Xm-nbK" secondAttribute="bottom" id="D33-Ah-OZE"/>
+                            <constraint firstAttribute="trailing" secondItem="kxD-Xm-nbK" secondAttribute="trailing" id="soQ-Hq-2iP"/>
+                            <constraint firstItem="kxD-Xm-nbK" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="whx-Xp-xVp"/>
+                            <constraint firstItem="kxD-Xm-nbK" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="zb5-zf-bCD"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="50.625" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchScreen" width="512" height="683"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="LaunchScreen" width="375" height="812"/>
     </resources>
 </document>
