--- a/fooiy/android/app/src/main/res/values/styles.xml
+++ b/fooiy/android/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
         <item name="android:navigationBarColor">#ffffff</item>
         <item name="android:colorPrimaryDark">#ffffff</item>
+        <item name="android:windowLightNavigationBar">true</item>
     </style>
 
 </resources>
